@@ -717,6 +717,7 @@
 					08A34A441A53F36300C1B7F8 = {
 						CreatedOnToolsVersion = 6.1.1;
 						DevelopmentTeam = 984G66F55J;
+						ProvisioningStyle = Automatic;
 					};
 					08A34AB21A585CFD00C1B7F8 = {
 						CreatedOnToolsVersion = 6.1.1;
@@ -1077,6 +1078,7 @@
 				ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME = LaunchImage;
 				CODE_SIGN_IDENTITY = "iPhone Developer";
 				"CODE_SIGN_IDENTITY[sdk=iphoneos*]" = "iPhone Developer";
+				DEVELOPMENT_TEAM = 984G66F55J;
 				GCC_PREFIX_HEADER = IKit/PrefixHeader.pch;
 				GCC_PREPROCESSOR_DEFINITIONS = (
 					"DEBUG=1",
@@ -1109,6 +1111,7 @@
 				ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME = LaunchImage;
 				CODE_SIGN_IDENTITY = "iPhone Developer";
 				"CODE_SIGN_IDENTITY[sdk=iphoneos*]" = "iPhone Developer";
+				DEVELOPMENT_TEAM = 984G66F55J;
 				GCC_PREFIX_HEADER = IKit/PrefixHeader.pch;
 				HEADER_SEARCH_PATHS = (
 					"$(inherited)",
